--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
 
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.jetbrains.intellij.java/java-gui-forms-designer -->
+    <dependency>
+      <groupId>com.jetbrains.intellij.java</groupId>
+      <artifactId>java-gui-forms-designer</artifactId>
+      <version>242.26775.15</version>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -70,11 +77,6 @@
               </goals>
             </execution>
           </executions>
-          <configuration>
-            <fork>true</fork>
-            <debug>true</debug>
-            <failOnError>true</failOnError>
-          </configuration>
         </plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
