--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 
 
   <dependencies>
+
     <!-- https://mvnrepository.com/artifact/com.jetbrains.intellij.java/java-gui-forms-designer -->
     <dependency>
       <groupId>com.jetbrains.intellij.java</groupId>
@@ -60,6 +61,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>9.5.0</version>
     </dependency>
   </dependencies>
 
