--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
   <dependencyManagement>
     <dependencies>
+
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
@@ -94,6 +95,7 @@
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>ideauidesigner-maven-plugin</artifactId>
@@ -156,7 +158,14 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
           <version>3.6.2</version>
-          <configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>java</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
             <mainClass>fr.sparadrap.ecf.App</mainClass>
           </configuration>
         </plugin>
@@ -206,6 +215,7 @@
 <!--          </execution>-->
 <!--        </executions>-->
 <!--      </plugin>-->
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
 
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
@@ -260,6 +270,7 @@
             </executions>
 
         </plugin>
+
 
     </plugins>
 
