--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,30 @@
             <version>242.26775.15</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.21</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
 
   <dependencies>
-
+      <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+      <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP</artifactId>
+          <version>7.0.2</version>
+      </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -87,6 +105,11 @@
           <groupId>com.intellij</groupId>
           <artifactId>forms_rt</artifactId>
           <version>7.0.3</version>
+      </dependency>
+      <dependency>
+          <groupId>fr.sparadrap.ecf</groupId>
+          <artifactId>sparadrap</artifactId>
+          <version>1.0-SNAPSHOT</version>
       </dependency>
 
 
