--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 # configuration pour la base de donnees
 jdbc.driver.class=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sparadrah_db
+jdbc.url=jdbc:mysql://localhost:3306/sparadrah_db?logger=com.mysql.cj.log.StandardLogger&profileSQL=true
 jdbc.login=root
 jdbc.password=root
