--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,13 @@
           <artifactId>HikariCP</artifactId>
           <version>7.0.2</version>
       </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-
-      <scope>test</scope>
-    </dependency>
+      <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>6.1.0-M1</version>
+          <scope>test</scope>
+      </dependency>
     <!-- Optionally: parameterized tests support -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
